Добавлены правки по результатам коментариев ревьюера